--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "5.2.2",
+    "@radix-ui/react-avatar": "1.1.11",
     "@radix-ui/react-checkbox": "1.3.3",
     "@radix-ui/react-context-menu": "2.2.16",
     "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-hover-card": "1.1.15",
     "@radix-ui/react-label": "2.1.8",
     "@radix-ui/react-menubar": "1.1.16",
@@ -42,6 +44,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "7.66.0",
     "react-resizable-panels": "3.0.6",
+    "recharts": "2.15.4",
     "tailwind-merge": "3.4.0",
     "vaul": "1.1.2",
     "zod": "4.1.12"
