--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest run"
   },
   "dependencies": {
     "@hookform/resolvers": "5.2.2",
@@ -51,14 +52,21 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@vitejs/plugin-react": "4.3.4",
     "@types/node": "20",
     "@types/qs": "6.14.0",
     "@types/react": "19",
     "@types/react-dom": "19",
     "eslint": "9",
     "eslint-config-next": "16.0.3",
+    "jsdom": "24.1.1",
     "tailwindcss": "4",
     "tw-animate-css": "1.4.0",
-    "typescript": "5"
+    "typescript": "5",
+    "vite-tsconfig-paths": "5.1.1",
+    "vitest": "2.1.4"
   }
 }
