--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest run"
+    "test": "vitest run --config vitest.config.mts"
   },
   "dependencies": {
     "@hookform/resolvers": "5.2.2",
+    "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-avatar": "1.1.11",
     "@radix-ui/react-checkbox": "1.3.3",
     "@radix-ui/react-context-menu": "2.2.16",
@@ -46,6 +47,7 @@
     "react-hook-form": "7.66.0",
     "react-resizable-panels": "3.0.6",
     "recharts": "2.15.4",
+    "sonner": "2.0.7",
     "tailwind-merge": "3.4.0",
     "vaul": "1.1.2",
     "zod": "4.1.12"
@@ -55,11 +57,11 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
-    "@vitejs/plugin-react": "4.3.4",
     "@types/node": "20",
     "@types/qs": "6.14.0",
     "@types/react": "19",
     "@types/react-dom": "19",
+    "@vitejs/plugin-react": "4.3.4",
     "eslint": "9",
     "eslint-config-next": "16.0.3",
     "jsdom": "24.1.1",
