--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
     "lucide-react": "0.553.0",
     "next": "16.0.3",
     "qs": "6.14.0",
     "react": "19.2.0",
-    "react-day-picker": "9.11.1",
+    "react-day-picker": "9.12.0",
     "react-dom": "19.2.0",
     "react-hook-form": "7.66.0",
     "react-resizable-panels": "3.0.6",
