--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
+    "html2canvas": "1.4.1",
     "lucide-react": "0.553.0",
     "next": "16.0.7",
     "qs": "6.14.0",
@@ -52,6 +53,7 @@
     "sonner": "2.0.7",
     "tailwind-merge": "3.4.0",
     "vaul": "1.1.2",
+    "xlsx": "0.18.5",
     "zod": "4.1.12"
   },
   "devDependencies": {
